# AIMET_ENV

./: .gitignore  main.py  pyproject.toml
tools/bge/: AIMET_bge.py  bge_aimet.ipynb
tools/comp_raw/: compare_raw.py  onnx_exe.py  onnx_pos_exe_zero.py  onnx_pos_exe_zero_mask.py  ruri_exe.py
tools/ruri/: AIMET_ruri.ipynb  AIMET_ruri_jmteb.ipynb  polt.ipynb  shape.ipynb  summary.json
tools/ruri/convert/: config.json  convert_script.sh  extensions.json  ruri-v2-genai.json  ruri-v2-htp-no-pos.json  ruri-v2-htp.json  ruri_tokenizer.json
tools/ruri/convert/netrun/: input_list.txt  input_list_soc.txt  listup.py  make_inputlist.py  raw_cmp.ipynb  sample.txt
tools/ruri/convert/script/: jmteb_embedding_android.sh  jmteb_eval.sh  jmteb_eval_pc.sh  jmteb_eval_soc.sh  jmteb_exec_embedding_android_adoptor.sh  jmteb_exec_soc.sh  jmteb_exec_soc_quat.sh  preprocess_jmteb.py  read_raw.py  summarize_jmteb_results.py
tools/ruri/data/: 200.arrow  abs_200_exe.arrow  hist_plot.py  jagov_merged_1000.arrow  query_abs_title200.arrow  query_token_counts.csv  summary.json
tools/ruri/quantize/: AIMET_ruri.ipynb  AIMET_ruri_jmteb.ipynb  AIMET_ruri_jmteb_copy.ipynb  calib_200_trim.py  calib_2data_merge.py  custom_config.json  dammy_create.py  export_onnx.py  genie_model_fix.py  genie_model_fix_mask_pool.py  genie_model_fix_mask_pool_tpi.py  htp_quantsim_config_v73.json  mask_num_rewrite.py  nohup.out  ruri_AIMET_quat_script.py  ruri_quat_.py  ruri_quat_AIMET.py  ruri_quat_AIMET_jmteb.py
tools/ruri/quantize/results/: jagov_normal.json  (+18 more)
tools/ruri/results/: abs_intro_retrieval_aimet.json
(+11 files in other folders)
